--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 <!-- MAP PAGE -->
 	<div data-role="page" id="map-page" data-theme="b">
 		<div data-role="header" id="map-page-header">
-			<a href="#level-panel" data-icon="star" data-iconpos="left" id="level-btn" data-role="button">Level</a>
-			<div id="bar-container">
-				<div id="xp-container"></div>
-				<div id="score-container"></div>
+<!-- 			<a href="#level-panel" data-icon="star" data-iconpos="left" id="level-btn" data-role="button">Level</a>
+ -->			<div id="bar-container">
+				<!-- <div id="xp-container"></div> -->
+				<!-- <div id="score-container"></div> -->
 			</div>
 		</div>
 		<div data-role="content">
@@ -53,11 +53,12 @@
 			</div>
 		</div>
 		<div data-role="panel" id="detail-panel" data-display="overlay">
-			<a id="map-btn" href="#map-page" data-icon="back" data-rel="close" class="ui-btn">zur&uuml;ck</a>
 			<h2 id="detail-panel-h2"></h2>
 			<img id="detail-panel-img">
 			<p id="detail-panel-p"></p>
-			<a id="btn-start-quiz" data-role="button" data-inline="true" class="ui-link ui-btn">Aufgaben</a>
+			<a id="btn-start-quiz" data-role="button" data-inline="true" class="ui-link ui-btn">weiter</a>
+						<a id="map-btn" href="#map-page" data-icon="back" data-rel="close" class="ui-btn">zur&uuml;ck</a>
+			
 		</div>
 	</div>
 <!-- STORY PAGE -->
