--- a/Index.html
+++ b/Index.html
@@ -307,9 +307,9 @@
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#map-page" data-role="button"
-						data-icon="navigation" data-theme="a" data-transition="slide">Zurück</a></li>
-					<li><a href="#outro-page1"" data-role="button"
-						data-icon="navigation" data-theme="a">Karte</a></li>
+						data-icon="navigation" data-theme="a" data-transition="slide">Karte</a></li>
+					<li><a href="#outro-page1" data-role="button"
+						data-icon="search" data-theme="a">Tätersuche</a></li>
 				</ul>
 			</div>
 		</div>
