--- a/Index.html
+++ b/Index.html
@@ -118,14 +118,16 @@
 
 
 		<div data-role="header" id="map-page-header">
-			<ul>
-
+		<div data-role="navbar">
+				<ul>
 				<li><a href="#eye-panel" data-role="button" data-icon="eye"
 					data-theme="a" data-transition="slide"></a></li>
 				<li><a href="#note-panel" id="note-button" data-role="button"
 					data-icon="bullets" data-transition="slide" data-theme="a"
 					data-transition="slide"></a></li>
-			</ul>
+				</ul>
+			</div>
+			
 		</div>
 
 		<div data-role="content">
@@ -288,8 +290,8 @@
 				<ul>
 					<li><a href="#location-page2" data-role="button"
 						data-icon="carat-l" data-theme="a" data-transition="slide">Zurück</a></li>
-					<li><a href="#notizen1" data-role="button"
-						data-icon="search" data-theme="a">Notizblock</a></li>
+					<li><a href="#notizen1" data-role="button" data-icon="search"
+						data-theme="a">Notizblock</a></li>
 				</ul>
 			</div>
 		</div>
@@ -318,11 +320,7 @@
 
 	<!--  WHO'S THE MURDER -->
 	<div data-role="page" id="outro-page1" data-theme="a">
-
-
 		<div class="page-img-container">
-
-
 			<table>
 				<tr>
 					<th><a href="#sieg-page"> <img class="taeter-img"
@@ -377,21 +375,15 @@
 					<li><a data-role="button" data-theme="a"> Finde den Täter.
 							<br> Wähle weise, du hast nur drei Versuche
 					</a></li>
-
 				</ul>
 			</div>
 		</div>
-
-
 	</div>
-
-
 	<div data-role="page" id="sieg-page" data-theme="a">
 		<div data-role="header" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-
-					<li><a href="#map-page" data-role="button" data-icon="delete"
+									<li><a href="#map-page" data-role="button" data-icon="delete"
 						data-theme="a"></a></li>
 				</ul>
 			</div>
