--- a/Index.html
+++ b/Index.html
@@ -324,53 +324,53 @@
 
 			<div class="ui-grid-b">
 				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a">
 						<a href="#sieg-page"> <img class="taeter-img"
 							src="img/Personen/plötschcke.jpg" id="imgPlötschcke"></a>
 					</div>
 				</div>
 				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a" >
 						<img class="taeter-img" src="img/Personen/priester.jpg"
 							id="imgPriester"
 							onclick="document.getElementById('imgPriester').src='img/Personen/fail.jpg'">
 					</div>
 				</div>
 				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a" >
 						<img class="taeter-img" src="img/Personen/junge.jpg" id="imgJunge"
 							onclick="document.getElementById('imgJunge').src='img/Personen/fail.jpg'">
 					</div>
 				</div>
 				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a" >
 						<img class="taeter-img" src="img/Personen/schwagerin.jpg"
 							id="imgSchwagerin"
 							onclick="document.getElementById('imgSchwagerin').src='img/Personen/fail.jpg'">
 					</div>
 				</div>
 				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a" >
 						<img class="taeter-img" src="img/Personen/mutter.jpg"
 							id="imgMutter"
 							onclick="document.getElementById('imgMutter').src='img/Personen/fail.jpg'">
 					</div>
 				</div>
 				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a" >
 						<img class="taeter-img" src="img/Personen/alteFrau.jpg"
 							id="imgAlteFrau"
 							onclick="document.getElementById('imgAlteFrau').src='img/Personen/fail.jpg'">
 					</div>
 				</div>
 				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a" >
 						<img class="taeter-img" src="img/Personen/wirt.jpg" id="imgWirt"
 							onclick="document.getElementById('imgWirt').src='img/Personen/fail.jpg'">
 					</div>
 				</div>
 				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a" style="height: 60px">
+					<div class="ui-bar ui-bar-a">
 						<img class="taeter-img" src="img/Personen/gartner.jpg"
 							id="imgGartner"
 							onclick="document.getElementById('imgGartner').src='img/Personen/fail.jpg'">
