--- a/Index.html
+++ b/Index.html
@@ -733,6 +733,421 @@
 	</div>
 	
 	
+		<!-- LOCATION PAGES LOC 5 -->
+	<!-- 1-->
+	<div data-role="page" id="location5-page" data-theme="a">
+		<div class="page-img-container">
+			<img class="location-img" src="img/location5.jpg">
+		</div>
+		<div class="content" data-role="content">
+			<div class="information-container">
+
+				<a href="#info-panel-location5" data-role="button" data-icon="info"
+					data-theme="a" data-iconpos="right"> <span
+					class="ui-btn-icon-left ui-icon-location"
+					style="position: relative" data-theme="a"></span>Rennofen
+				</a>
+			</div>
+			<div class="text-wrapper">
+				<div class="text-container" data-theme="a">
+					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+						diam nonumy eirmod tempor invidunt ut labore et dolore magna
+						aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+						duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+						sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+						tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+						voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+						Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing
+						elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+						magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+						justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+						sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+						tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+						voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+						Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#map-page" data-role="button" data-icon="carat-l"
+						data-theme="a" data-transition="slide"></a></li>
+					<li><a href="#location5-page2" data-role="button"
+						data-icon="carat-r" data-transition="slide" data-theme="a"
+						data-transition="slide"></a></li>
+				</ul>
+			</div>
+		</div>
+		<div data-role="panel" id="info-panel-location5" data-position="right"
+			data-theme="b">
+			<h3>Rennofen</h3>
+			<p>In der römischen Siedlung wurde über einen längeren Zeitraum
+				intensiv Eisen verhüttet. Dafür wurden Öfen aus Lehm, sogenannte
+				Rennöfen, errichtet, die mit Eisenerz und Holzkohle befüllt und ein
+				bis zwei Tage lang befeuert wurden. Als Ergebnis erhielt man
+				Schlacke mit Eisen, das vom Schmied herausgearbeitet werden konnte.</p>
+			<a href="#location5-page" data-role="button" data-icon="delete"
+				data-theme="b" data-rel="close" data-iconpos="right"></a>
+		</div>
+	</div>
+
+	<!--  2 -->
+	<div data-role="page" id="location5-page2" data-theme="a">
+
+		<div class="page-img-container">
+			<img class="location-img" src="img/location5-2.jpg">
+		</div>
+		<div class="text-wrapper">
+			<div class="text-container" data-theme="a">
+				<div class="bubble_container ">
+					<p>"Lalala lala lalalal alalala lalalal alala Lalalal
+						alalalalala lalalal alalalalala Lalalalal alalalalala lalalal
+						alalal alaLal lalalal "</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#location5-page" data-role="button"
+						data-icon="carat-l" data-theme="a" data-transition="slide"></a></li>
+					<li><a href="#location5-page3" data-role="button"
+						data-icon="carat-r" data-theme="a" data-transition="silde"></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+
+	<!--  3 -->
+	<div data-role="page" id="location5-page3" data-theme="a">
+
+		<div class="page-img-container">
+			<img class="location-img" src="img/location5-3.jpg">
+		</div>
+		<div class="text-wrapper">
+			<div class="text-container" data-theme="a">
+				<div class="bubble_container ">
+					<p>"Lalala lala lalalal alalala lalalal alala Lalalal
+						alalalalala lalalal alalalalala Lalalalal alalalalala lalalal
+						alalal alaLal lalalal "</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#location5-page2" data-role="button"
+						data-icon="carat-l" data-theme="a" data-transition="slide">Zurück</a></li>
+					<li><a href="#notizen5" data-role="button" data-icon="search"
+						data-theme="a">Notizblock</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<!-- NOTIZEN5 -->
+	<div data-role="page" id="notizen5" data-theme="a">
+
+		<h2>Machen Sie sich Notizen, Herr Kommissar!</h2>
+
+		<div class="text-wrapper">
+			<input type="text" id="notiz5">
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#map-page" data-role="button"
+						data-icon="navigation" data-theme="a" data-transition="slide">Karte</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	
+	
+		<!-- LOCATION PAGES LOC 6 -->
+	<!-- 1-->
+	<div data-role="page" id="location6-page" data-theme="a">
+		<div class="page-img-container">
+			<img class="location-img" src="img/location6.jpg">
+		</div>
+		<div class="content" data-role="content">
+			<div class="information-container">
+
+				<a href="#info-panel-location6" data-role="button" data-icon="info"
+					data-theme="a" data-iconpos="right"> <span
+					class="ui-btn-icon-left ui-icon-location"
+					style="position: relative" data-theme="a"></span>Rennofen
+				</a>
+			</div>
+			<div class="text-wrapper">
+				<div class="text-container" data-theme="a">
+					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+						diam nonumy eirmod tempor invidunt ut labore et dolore magna
+						aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+						duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+						sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+						tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+						voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+						Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing
+						elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+						magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+						justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+						sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+						tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+						voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+						Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#map-page" data-role="button" data-icon="carat-l"
+						data-theme="a" data-transition="slide"></a></li>
+					<li><a href="#location6-page2" data-role="button"
+						data-icon="carat-r" data-transition="slide" data-theme="a"
+						data-transition="slide"></a></li>
+				</ul>
+			</div>
+		</div>
+		<div data-role="panel" id="info-panel-location6" data-position="right"
+			data-theme="b">
+			<h3>Rennofen</h3>
+			<p>In der römischen Siedlung wurde über einen längeren Zeitraum
+				intensiv Eisen verhüttet. Dafür wurden Öfen aus Lehm, sogenannte
+				Rennöfen, errichtet, die mit Eisenerz und Holzkohle befüllt und ein
+				bis zwei Tage lang befeuert wurden. Als Ergebnis erhielt man
+				Schlacke mit Eisen, das vom Schmied herausgearbeitet werden konnte.</p>
+			<a href="#location6-page" data-role="button" data-icon="delete"
+				data-theme="b" data-rel="close" data-iconpos="right"></a>
+		</div>
+	</div>
+
+	<!--  2 -->
+	<div data-role="page" id="location6-page2" data-theme="a">
+
+		<div class="page-img-container">
+			<img class="location-img" src="img/location6-2.jpg">
+		</div>
+		<div class="text-wrapper">
+			<div class="text-container" data-theme="a">
+				<div class="bubble_container ">
+					<p>"Lalala lala lalalal alalala lalalal alala Lalalal
+						alalalalala lalalal alalalalala Lalalalal alalalalala lalalal
+						alalal alaLal lalalal "</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#location6-page" data-role="button"
+						data-icon="carat-l" data-theme="a" data-transition="slide"></a></li>
+					<li><a href="#location6-page3" data-role="button"
+						data-icon="carat-r" data-theme="a" data-transition="silde"></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+
+	<!--  3 -->
+	<div data-role="page" id="location6-page3" data-theme="a">
+
+		<div class="page-img-container">
+			<img class="location-img" src="img/location6-3.jpg">
+		</div>
+		<div class="text-wrapper">
+			<div class="text-container" data-theme="a">
+				<div class="bubble_container ">
+					<p>"Lalala lala lalalal alalala lalalal alala Lalalal
+						alalalalala lalalal alalalalala Lalalalal alalalalala lalalal
+						alalal alaLal lalalal "</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#location6-page2" data-role="button"
+						data-icon="carat-l" data-theme="a" data-transition="slide">Zurück</a></li>
+					<li><a href="#notizen6" data-role="button" data-icon="search"
+						data-theme="a">Notizblock</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<!-- NOTIZEN6 -->
+	<div data-role="page" id="notizen6" data-theme="a">
+
+		<h2>Machen Sie sich Notizen, Herr Kommissar!</h2>
+
+		<div class="text-wrapper">
+			<input type="text" id="notiz6">
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#map-page" data-role="button"
+						data-icon="navigation" data-theme="a" data-transition="slide">Karte</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	
+	
+		<!-- LOCATION PAGES LOC 7 -->
+	<!-- 1-->
+	<div data-role="page" id="location7-page" data-theme="a">
+		<div class="page-img-container">
+			<img class="location-img" src="img/location7.jpg">
+		</div>
+		<div class="content" data-role="content">
+			<div class="information-container">
+
+				<a href="#info-panel-location6" data-role="button" data-icon="info"
+					data-theme="a" data-iconpos="right"> <span
+					class="ui-btn-icon-left ui-icon-location"
+					style="position: relative" data-theme="a"></span>Rennofen
+				</a>
+			</div>
+			<div class="text-wrapper">
+				<div class="text-container" data-theme="a">
+					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+						diam nonumy eirmod tempor invidunt ut labore et dolore magna
+						aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+						duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+						sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+						tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+						voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+						Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing
+						elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+						magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+						justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
+						sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+						tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+						voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+						Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#map-page" data-role="button" data-icon="carat-l"
+						data-theme="a" data-transition="slide"></a></li>
+					<li><a href="#location7-page2" data-role="button"
+						data-icon="carat-r" data-transition="slide" data-theme="a"
+						data-transition="slide"></a></li>
+				</ul>
+			</div>
+		</div>
+		<div data-role="panel" id="info-panel-location7" data-position="right"
+			data-theme="b">
+			<h3>Rennofen</h3>
+			<p>In der römischen Siedlung wurde über einen längeren Zeitraum
+				intensiv Eisen verhüttet. Dafür wurden Öfen aus Lehm, sogenannte
+				Rennöfen, errichtet, die mit Eisenerz und Holzkohle befüllt und ein
+				bis zwei Tage lang befeuert wurden. Als Ergebnis erhielt man
+				Schlacke mit Eisen, das vom Schmied herausgearbeitet werden konnte.</p>
+			<a href="#location6-page" data-role="button" data-icon="delete"
+				data-theme="b" data-rel="close" data-iconpos="right"></a>
+		</div>
+	</div>
+
+	<!--  2 -->
+	<div data-role="page" id="location7-page2" data-theme="a">
+
+		<div class="page-img-container">
+			<img class="location-img" src="img/location7-2.jpg">
+		</div>
+		<div class="text-wrapper">
+			<div class="text-container" data-theme="a">
+				<div class="bubble_container ">
+					<p>"Lalala lala lalalal alalala lalalal alala Lalalal
+						alalalalala lalalal alalalalala Lalalalal alalalalala lalalal
+						alalal alaLal lalalal "</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#location7-page" data-role="button"
+						data-icon="carat-l" data-theme="a" data-transition="slide"></a></li>
+					<li><a href="#location7-page3" data-role="button"
+						data-icon="carat-r" data-theme="a" data-transition="silde"></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+
+	<!--  3 -->
+	<div data-role="page" id="location7-page3" data-theme="a">
+
+		<div class="page-img-container">
+			<img class="location-img" src="img/location7-3.jpg">
+		</div>
+		<div class="text-wrapper">
+			<div class="text-container" data-theme="a">
+				<div class="bubble_container ">
+					<p>"Lalala lala lalalal alalala lalalal alala Lalalal
+						alalalalala lalalal alalalalala Lalalalal alalalalala lalalal
+						alalal alaLal lalalal "</p>
+				</div>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#location7-page2" data-role="button"
+						data-icon="carat-l" data-theme="a" data-transition="slide">Zurück</a></li>
+					<li><a href="#notizen7" data-role="button" data-icon="search"
+						data-theme="a">Notizblock</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<!-- NOTIZEN7 -->
+	<div data-role="page" id="notizen7" data-theme="a">
+
+		<h2>Machen Sie sich Notizen, Herr Kommissar!</h2>
+
+		<div class="text-wrapper">
+			<input type="text" id="notiz7">
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#map-page" data-role="button"
+						data-icon="navigation" data-theme="a" data-transition="slide">Karte</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	
+	
+	
 	
 
 	<!--  WHO'S THE MURDER -->
