--- a/Index.html
+++ b/Index.html
@@ -316,11 +316,11 @@
 			</div>
 		</div>
 	</div>
-	
-	
-	
-	
-	
+
+
+
+
+
 	<!-- LOCATION PAGES LOC 2-->
 	<!-- 1-->
 	<div data-role="page" id="location2-page" data-theme="a">
@@ -594,9 +594,9 @@
 			</div>
 		</div>
 	</div>
-	
-	
-		<!-- LOCATION PAGES LOC 4 -->
+
+
+	<!-- LOCATION PAGES LOC 4 -->
 	<!-- 1-->
 	<div data-role="page" id="location4-page" data-theme="a">
 		<div class="page-img-container">
@@ -731,9 +731,9 @@
 			</div>
 		</div>
 	</div>
-	
-	
-		<!-- LOCATION PAGES LOC 5 -->
+
+
+	<!-- LOCATION PAGES LOC 5 -->
 	<!-- 1-->
 	<div data-role="page" id="location5-page" data-theme="a">
 		<div class="page-img-container">
@@ -868,10 +868,10 @@
 			</div>
 		</div>
 	</div>
-	
-	
-	
-		<!-- LOCATION PAGES LOC 6 -->
+
+
+
+	<!-- LOCATION PAGES LOC 6 -->
 	<!-- 1-->
 	<div data-role="page" id="location6-page" data-theme="a">
 		<div class="page-img-container">
@@ -1006,10 +1006,10 @@
 			</div>
 		</div>
 	</div>
-	
-	
-	
-		<!-- LOCATION PAGES LOC 7 -->
+
+
+
+	<!-- LOCATION PAGES LOC 7 -->
 	<!-- 1-->
 	<div data-role="page" id="location7-page" data-theme="a">
 		<div class="page-img-container">
@@ -1144,74 +1144,62 @@
 			</div>
 		</div>
 	</div>
-	
-	
-	
-	
-	
 
-	<!--  WHO'S THE MURDER -->
+
+
+
+
+
+	<!-- WHO'S THE MURDER -->
 	<div data-role="page" id="outro-page1" data-theme="a">
-		<div class="murder-img-container">
+		<div class="murder-img-container" align="center">
 
-			<div class="ui-grid-b">
-				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a">
-						<a href="#sieg-page"> <img class="taeter-img"
-							src="img/Personen/plötschcke.jpg" id="imgPlötschcke"></a>
-					</div>
-				</div>
-				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a" >
-						<img class="taeter-img" src="img/Personen/priester.jpg"
-							id="imgPriester"
-							onclick="document.getElementById('imgPriester').src='img/Personen/fail.jpg'">
-					</div>
-				</div>
-				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a" >
-						<img class="taeter-img" src="img/Personen/junge.jpg" id="imgJunge"
-							onclick="document.getElementById('imgJunge').src='img/Personen/fail.jpg'">
-					</div>
-				</div>
-				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a" >
-						<img class="taeter-img" src="img/Personen/schwagerin.jpg"
-							id="imgSchwagerin"
-							onclick="document.getElementById('imgSchwagerin').src='img/Personen/fail.jpg'">
-					</div>
-				</div>
-				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a" >
-						<img class="taeter-img" src="img/Personen/mutter.jpg"
-							id="imgMutter"
-							onclick="document.getElementById('imgMutter').src='img/Personen/fail.jpg'">
-					</div>
-				</div>
-				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a" >
-						<img class="taeter-img" src="img/Personen/alteFrau.jpg"
-							id="imgAlteFrau"
-							onclick="document.getElementById('imgAlteFrau').src='img/Personen/fail.jpg'">
-					</div>
-				</div>
-				<div class="ui-block-a">
-					<div class="ui-bar ui-bar-a" >
-						<img class="taeter-img" src="img/Personen/wirt.jpg" id="imgWirt"
-							onclick="document.getElementById('imgWirt').src='img/Personen/fail.jpg'">
-					</div>
-				</div>
-				<div class="ui-block-b">
-					<div class="ui-bar ui-bar-a">
-						<img class="taeter-img" src="img/Personen/gartner.jpg"
-							id="imgGartner"
-							onclick="document.getElementById('imgGartner').src='img/Personen/fail.jpg'">
-					</div>
-				</div>
-			</div>
+			<table>
+				<tr>
+					<th><a href="#sieg-page"> <img class="taeter-img"
+							src="img/Personen/plötschcke.jpg" id="imgPlötschcke">
+					</a></th>
 
+					<th><img class="taeter-img" src="img/Personen/priester.jpg"
+						id="imgPriester"
+						onclick="document.getElementById('imgPriester').src='img/Personen/fail.jpg'">
+					</th>
+				</tr>
+				<tr>
+					<th><img class="taeter-img" src="img/Personen/junge.jpg"
+						id="imgJunge"
+						onclick="document.getElementById('imgJunge').src='img/Personen/fail.jpg'">
+					</th>
 
+					<th><img class="taeter-img" src="img/Personen/schwagerin.jpg"
+						id="imgSchwagerin"
+						onclick="document.getElementById('imgSchwagerin').src='img/Personen/fail.jpg'">
+					</th>
+				</tr>
+				<tr>
+					<th><img class="taeter-img" src="img/Personen/mutter.jpg"
+						id="imgMutter"
+						onclick="document.getElementById('imgMutter').src='img/Personen/fail.jpg'">
+					</th>
+
+					<th><img class="taeter-img" src="img/Personen/alteFrau.jpg"
+						id="imgAlteFrau"
+						onclick="document.getElementById('imgAlteFrau').src='img/Personen/fail.jpg'">
+					</th>
+				</tr>
+				<tr>
+					<th><img class="taeter-img" src="img/Personen/wirt.jpg"
+						id="imgWirt"
+						onclick="document.getElementById('imgWirt').src='img/Personen/fail.jpg'"></th>
+
+					<th><img class="taeter-img" src="img/Personen/gartner.jpg"
+						id="imgGartner"
+						onclick="document.getElementById('imgGartner').src='img/Personen/fail.jpg'">
+					</th>
+				</tr>
+			</table>
 		</div>
+
 
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
