Anpassung Größe Location-img und Abstand zwischen img und Info-Zeile

--- a/Index.html
+++ b/Index.html
@@ -187,7 +187,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location1.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location1" data-role="button" data-icon="info"
@@ -393,7 +393,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location2.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location2" data-role="button" data-icon="info"
@@ -759,7 +759,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location3.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location3" data-role="button" data-icon="info"
@@ -964,7 +964,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location4.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location4" data-role="button" data-icon="info"
@@ -1092,7 +1092,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location5.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location5" data-role="button" data-icon="info"
@@ -1212,7 +1212,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location6.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location6" data-role="button" data-icon="info"
@@ -1337,7 +1337,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location7.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location6" data-role="button" data-icon="info"
@@ -1462,7 +1462,7 @@
 		<div class="page-img-container">
 			<img class="location-img" src="img/location8.jpg">
 		</div>
-		<div class="content" data-role="content">
+		<div class="content"> <!--  data-role="content" weggenommen, dadurch bug im Schließen vom Panel. Dadurch info-balken dichter am locationimg -->
 			<div class="information-container">
 
 				<a href="#info-panel-location8" data-role="button" data-icon="info"
